Fix module finder logic and styles
- Remove the department map invert code and just use the map to get a
  list of departments and faculties to fill the filter list
- Always make the side menu 100% of the remaining height so that the
  dropdown menu won't be clipped

--- a/www/src/js/views/modules/ModuleFinderContainer.scss
+++ b/www/src/js/views/modules/ModuleFinderContainer.scss
@@ -1,6 +1,8 @@
 @import "~styles/utils/modules-entry.scss";
 
 .moduleFilters {
+  height: 100%;
+
   .filterHeader {
     display: flex;
     margin-bottom: 1rem;
